--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,8 +29,8 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="register.html" class="aa-register">Register</a>
-                  <a href="signin.html" class="aa-login">Login</a>
+                  <a href="/registrations/new.html.erb" class="aa-register">Register</a>
+                  <a href="/sessions/new.html.erb" class="aa-login">Login</a>
                 </div>
               </div>
             </div>
