--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -141,6 +141,7 @@ img {
   position: absolute;
   right: 0;
   top: 0;
+  background-color: #000000;
   width: 100%;
   z-index: 99;
 }
@@ -211,7 +212,7 @@ img {
   z-index: 99;
 }
 #aa-menu-area .main-navbar {
-  background-color: transparent;
+  background-color: #000000;
   border: medium none;
   border-radius: 0;
 }
