--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
                 <a class="aa-property-home" href="index.html">Property Home</a>
                 <h4>Create your account and Stay with us</h4>
               </div>
-              <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "contactform") do |f| %>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form") do |f| %>
                 <%= devise_error_messages! %>
                                                
                 <div class="aa-single-field">
