--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,9 +32,11 @@
                   <% if user_signed_in? %>
                     Signed in as <%= current_user.email %>. 
                     Not you?
-                    <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+                    <%= link_to "Log out", destroy_user_session_path, :method => :delete %>| 
+                    <%= link_to "Show Property", properties_path %>
                   <% else %>
-                    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "Log In", new_user_session_path %>
+                    <%= link_to "Sign up", new_user_registration_path %> | <%= link_to "Log In", new_user_session_path %>
+
                   <% end %>
                 </div>
               </div>
