--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,7 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-color: #83ff33;
+  background-image: url(bc.png);
+  color: #83ff33;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
