--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -13,37 +13,36 @@
    <div class="form-group">
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control", style: "width: 40%" %>
   </div>
   <div class="field">
     <%= f.label :category %><br>
-    <%= f.text_field :category %>
+    <%= f.text_field :category, class:"form-control", style: "width: 40%" %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
-    <%= f.text_field :price %>
+    <%= f.text_field :price, class:"form-control", style: "width: 40%" %>
   </div>
   <div class="field">
     <%= f.label :address %><br>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, class:"form-control", style: "width: 40%" %>
   </div>
   <div class="field">
     <%= f.label :city %><br>
-    <%= f.text_field :city %>
+    <%= f.text_field :city, class:"form-control", style: "width: 40%" %>
   </div>
   <div class="field">
     <%= f.label :state %><br>
-    <%= f.text_field :state %>
+    <%= f.text_field :state, class:"form-control", style: "width: 40%" %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class:"form-control", style: "width: 40%" %>
   </div>
-  <div class="field">
-    <%= f.file_field :image %>
-  </div>
+    <%= f.file_field :image, class:"field" %><br>
   <div class="actions">
     <%= f.submit %>
   </div>
-  </div>
+  
 <% end %>
+</div>
