--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -3,6 +3,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @property %> |
-<%= link_to 'Back', properties_path %>
+<%= link_to 'Show', @property, class: "btn-info" %> |
+<%= link_to 'Back', properties_path, class: "btn-info" %>
 </div>
