--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,8 @@
                   <%= f.password_field :password_confirmation, autocomplete: "off" %>
                 </div>
                 <div class="aa-single-submit">
-                  <%= f.submit "Sign up" %>                    
+                  <%= f.submit "Sign up" %>   
+                  <p>Already Registered ? <%= link_to "Log in", new_user_session_path %></p>               
                 </div>
                 <% end %>
             </div>
